# postgis_parallel_dijkstra

./: .gitignore  CMakeLists.txt  DijkstraGraph.cpp  DijkstraGraph.h  DijkstraNode.cpp  DijkstraNode.h  ParallelDijkstra.cpp  ParallelDijkstra.h  PostgreSQLLoader.cpp  PostgreSQLLoader.h  README.md  main.cpp
SQL/: .t.swp  bb_liechtensten.sql  create_line_string_table.sql  create_voronoi_table.sql  gis_arti.sql  line_string_akut.sql  linestring2.sql  linestring2000.sql
